# pacs

./: .gitignore  Cargo.toml  README.md  dev_loop.log.success  dev_loop.sh  prompt.md
crates/pacs-admin/: Cargo.toml
crates/pacs-admin/src/: alerting.rs  backup.rs  config.rs  lib.rs  logging.rs  monitoring.rs  performance.rs
crates/pacs-core/: Cargo.toml
crates/pacs-core/src/: error.rs  lib.rs  models.rs  utils.rs
crates/pacs-database/: Cargo.toml
crates/pacs-database/src/: connection.rs  lib.rs  models.rs  queries.rs
crates/pacs-dicom/: Cargo.toml
crates/pacs-dicom/src/: association.rs  dimse.rs  lib.rs  parser.rs  server.rs  services.rs  transfer_syntax.rs  validator.rs
crates/pacs-integration/: Cargo.toml
crates/pacs-integration/src/: api.rs  connectors.rs  hl7.rs  lib.rs  message_queue.rs  webhook.rs
crates/pacs-storage/: Cargo.toml
crates/pacs-storage/src/: archive.rs  backup.rs  lib.rs  lifecycle.rs  monitoring.rs  storage.rs
crates/pacs-web/: Cargo.toml
crates/pacs-web/src/: auth.rs  handlers.rs  lib.rs  server.rs  static_files.rs  wado.rs
crates/pacs-workflow/: Cargo.toml
crates/pacs-workflow/src/: critical_value.rs  engine.rs  lib.rs  routing.rs  state_machine.rs  worklist.rs
docs/: arch.md  guild.md  progress.md  requirement.md
examples/: admin_demo.rs  integration_demo.rs  integration_simple.rs  workflow_demo.rs
pacs-server/: Cargo.toml
pacs-server/src/: main.rs
