[workspace]
members = [
    "crates/pacs-core",
    "crates/pacs-dicom",
    "crates/pacs-storage",
    "crates/pacs-database",
    "crates/pacs-workflow",
    "crates/pacs-integration",
    "crates/pacs-web",
    "crates/pacs-admin",
    "pacs-server"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["PACS Team"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/your-org/pacs"

[workspace.dependencies]
# 异步运行时
tokio = { version = "1.0", features = ["full"] }

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 错误处理
anyhow = "1.0"
thiserror = "1.0"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# DICOM 处理
dicom = "0.9"

# Web 框架
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# 数据库
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }

# 存储
object_store = { version = "0.9", features = ["aws"] }

# 压缩
flate2 = "1.0"

# 哈希
sha2 = "0.10"

# 配置
config = "0.14"

# 监控
prometheus = "0.13"

# 时间处理
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.0", features = ["v4", "serde"] }

# 命令行
clap = { version = "4.0", features = ["derive"] }

# 异步trait
async-trait = "0.1"
