[package]
name = "pacs-integration"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
pacs-core = { path = "../pacs-core" }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }

# Web框架
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# 消息队列
lapin = "2.1"

# HL7解析
regex = "1.10"

# HTTP客户端
reqwest = { version = "0.11", features = ["json"] }

# 哈希
sha2 = { workspace = true }
